<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".IntroPageActivity">

    <ImageView
        android:id="@+id/intro_page_img"
        android:layout_width="319dp"
        android:layout_height="329dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/intro_page_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_page_img">

        <TextView
            android:id="@+id/intro_page_titie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/intro_page_title1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/intro_page_titie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif"
            android:text="@string/intro_page_title2"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/intro_page_titie3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro_page_title3"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_page_btn_user"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_button_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro_page_title4"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/intro_page_btn_teknisi"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_rectangle_button_line_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro_page_title5"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>