<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginPageActivity">

    <ImageView
        android:id="@+id/login_page_logo"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_logo">

        <TextView
            android:id="@+id/login_page_titile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/login_page_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_page_btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rectangle_button_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_page_btn_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_page_btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_rectangle_button_line_green"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_page_btn_register"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>